--- a/슬기/Homepage_React/package.json
+++ b/슬기/Homepage_React/package.json
@@ -17,7 +17,7 @@
     "tailwindcss": "^2.2.19"
   },
   "author": "cia999g",
-  "license": "ISC",
+  "license": "ISC",8
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "autoprefixer": "^10.4.20",
