--- a/슬기/package.json
+++ b/슬기/package.json
@@ -17,7 +17,8 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
     "reactstrap": "^9.2.3",
-    "redux": "^5.0.1"
+    "redux": "^5.0.1",
+    "sweetalert2": "^11.14.4"
   },
   "devDependencies": {
     "eslint": "^9.13.0",
