--- a/슬기/REACT_200제/client/package.json
+++ b/슬기/REACT_200제/client/package.json
@@ -3,14 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "-": "^0.0.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "jquery": "^3.7.1",
+    "nth-check": "^2.0.1",
+    "postcss": "^8.4.31",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-scripts": "5.0.1",
+    "react-redux": "^9.1.2",
+    "react-scripts": "^3.0.1",
     "reactstrap": "^9.2.3",
+    "redux": "^5.0.1",
     "shallow-equal": "^3.1.0",
     "web-vitals": "^2.1.4"
   },
